--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.14.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.14.0",
+    "react-phone-number-input": "^3.1.23",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
