--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#vscode
+/.vscode
+
 # dependencies
 /node_modules
+/enpoints
 /.pnp
 .pnp.js
-
+.eslintcache
 # testing
 /coverage
 
